--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,5 +2,5 @@
   border-radius: 50px;
   padding: 20px;
   background: #fff;
-  box-shadow: 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.05);
 }
