--- a/src/components/Rating/Rating.css
+++ b/src/components/Rating/Rating.css
@@ -1,11 +1,11 @@
-.recomended-content-top span {
+.star-holder{
     position: absolute;
     top: 10px;
-    right: 20px;
+    right: 15px;
     background-color: var(--white);
     padding: 3px 15px;
     border-radius: 25px;
   }
-  .recomended-content-top span .rate-star {
+.rate-star {
       color: gold;
   }
