--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -31,6 +31,13 @@ a {
   margin: auto;
   max-width: 1180px;
 }
+@media screen and (max-width:1180px) {
+.container {
+  max-width: 1100px
+}
+
+  
+}
 ul li {
   list-style: none;
 }
