--- a/src/components/Tabs/RecomendedContent/RecomendedContent.css
+++ b/src/components/Tabs/RecomendedContent/RecomendedContent.css
@@ -1,6 +1,9 @@
-.recomended-card{
-    padding:10px;
-    border-radius: 25px;
+.recomended-card {
+  padding: 10px;
+  border-radius: 25px;
+}
+.recomended-content {
+  height: 485px;
 }
 .recomended-content-top {
   display: flex;
@@ -8,21 +11,21 @@
   justify-content: center;
   position: relative;
 }
-.offer-name p{
-    font-size: 18px;
+.offer-name p {
+  font-size: 18px;
 }
-.recomended-content-top img{
-    width: 260px;
-    height: 200px;
-    border-radius: 25px;
+.recomended-content-top img {
+  width: 260px;
+  height: 200px;
+  border-radius: 25px;
 }
 
-.recomended-content-place{
-    color: var(--light-gray);
-    display: flex;
-    align-items: center;
+.recomended-content-place {
+  color: var(--light-gray);
+  display: flex;
+  align-items: center;
 }
-.recomended-content-place .location{
-    color: rgb(234,107,115);
-    margin-right: 5px;
+.recomended-content-place .location {
+  color: rgb(234, 107, 115);
+  margin-right: 5px;
 }
